@@ -1,5 +1,12 @@
 2007-01-05  Daniel Elstner  <daniel.kitta@gmail.com>
 
+	* autogen.sh: Further simplify the script by making use of set -e
+	and colons in substitutions, like ${foo:-bar}.  Although some truly
+	ancient shells do not provide these features, this does not matter
+	much for scripts intended for maintainer use.
+
+2007-01-05  Daniel Elstner  <daniel.kitta@gmail.com>
+
 	* autogen.sh: Reduce number of rm -f invocations by means of line
 	continuation.
 
